@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX mcollectived.initd 597 RMD160 ad252d866ea4f9f5dac7cb8c851d7ef561eae84c SHA1 4fc766e41db8f50dcde5e8f2c5495f4ad13dd9ec SHA256 3a187881d05152762116a80bb325c1f80ed2096802c19aa37ba77287784979fb
+AUX mcollectived.initd 611 RMD160 8c37234210005e1ad2705360f9b04e870b629011 SHA1 43337c8f059d8c77ca5323e9f09664d1b271b708 SHA256 ca676b85fe2e4a1e4acc64a8f06e67b12ea68982f17cf08f757d68dd633d0220
 DIST mcollective-0.4.5.tgz 167147 RMD160 ab0a96d4cb2d3adba8f18f09a6b5785ec2740efb SHA1 85bef77b04bdf535471495a3172a772e1f624892 SHA256 994c86cb555182f1183e001ff4dc5ce7bbf6457d077459d6c5fab0956ef774da
-EBUILD mcollective-0.4.5.ebuild 1325 RMD160 ee187c4efaefbcb3cc98dbada23e4203c0558e68 SHA1 a19f32ce70994f0bb75130cbb56e5dd8c6336714 SHA256 ea0dfffc186e5cb2d582c80bbf480183db6f8cc8d8c9cf6a8d9882245987bbd5
-MISC ChangeLog 996 RMD160 95bffc4873f67c4219b9380aa1c008bc6a183815 SHA1 ea3a76b8576ab142b4ef41157f29848e75cc9d3d SHA256 4faec24683faad6fa6f7b7fdb4d94c6710445bbdc8a6d57e0c04596f32e1bb7d
+EBUILD mcollective-0.4.5.ebuild 1445 RMD160 8b9729195df11a5743c35ae59033061342ffa1a6 SHA1 744949a4d7fdfb0d9bb2b2573fc85c0c2dcc7276 SHA256 cbdf12fc54cc7457d25ddf1ab94630653067a289a0c1391d26a6db95fe8e9d39
+MISC ChangeLog 1166 RMD160 a854a3c323d574995e691b8df10cdaa9d0f43e0e SHA1 7d0b717621e0f24d4e1b73d8e83a4574b984c204 SHA256 fa8ae94e4619a72cbe3a6cc9800c3e38ce9ee9a262a4ad4170d92a2add2306b2
 MISC metadata.xml 428 RMD160 feee94472e92ab507bdbdd678fa2ea8b02b65ac6 SHA1 c2b0057b0d86fe3e5cc93cbb3ed551410ca05d05 SHA256 16f1e90b1d2d4b13cd323983cde873dcc56bb25eade80030d21bc1815a158338
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFMDkNyQW+hXSf0t0IRArszAKD0QALZowuW4EndaeQWtyCAyvJIzgCgwrt2
-OHpgRBSmHtCXLp1V1/rswEk=
-=vKn6
+iD8DBQFMEURiQW+hXSf0t0IRAq4uAKDsUSjbvgYNpf999ANBD+OiikwKSwCgnVgY
+hK68T35a7A0MceCb+8VJ8Rs=
+=b8H4
 -----END PGP SIGNATURE-----
